--- a/build.properties
+++ b/build.properties
@@ -3,5 +3,6 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               icons/,\
-               contexts.xml
+               contexts.xml,\
+               OSGI-INF/l10n/bundle.properties,\
+               OSGI-INF/
