--- a/build.properties
+++ b/build.properties
@@ -5,4 +5,7 @@ bin.includes = plugin.xml,\
                .,\
                contexts.xml,\
                OSGI-INF/l10n/bundle.properties,\
-               OSGI-INF/
+               OSGI-INF/,\
+               icons/
+additional.bundles = org.apache.httpcomponents.httpclient
+custom = true
