--- a/plugin.xml
+++ b/plugin.xml
@@ -3,6 +3,7 @@
 <plugin>
 
    <extension
+         id="views"
          point="org.eclipse.ui.views">
       <category
             name="BitBucket"
@@ -17,6 +18,7 @@
       </view>
    </extension>
    <extension
+         id="preferences"
          point="org.eclipse.ui.preferencePages">
       <page
             id="com.diabolo.eclipse.bitbucket.preferences.BitBucketPreferencePage"
@@ -25,10 +27,46 @@
       </page>
    </extension>
    <extension
+         id="runtime"
          point="org.eclipse.core.runtime.preferences">
       <initializer
             class="com.diabolo.eclipse.bitbucket.preferences.PreferenceInitializer">
       </initializer>
+   </extension>
+   <extension
+         point="org.eclipse.ui.commands">
+      <category
+            id="com.diabolo.eclipse.bitbucket.commands.category"
+            name="Sample Category">
+      </category>
+      <command
+            categoryId="com.diabolo.eclipse.bitbucket.commands.category"
+            id="com.diabolo.eclipse.bitbucket.commands.sampleCommand"
+            name="Sample Command">
+      </command>
+   </extension>
+   <extension
+         point="org.eclipse.ui.handlers">
+      <handler
+            class="com.diabolo.eclipse.bitbucket.handlers.MenuHandler"
+            commandId="com.diabolo.eclipse.bitbucket.commands.sampleCommand">
+      </handler>
+   </extension>
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            locationURI="popup:team.main?after=group1">
+         <menu
+               id="com.diabolo.eclipse.bitbucket.menus.sampleMenu"
+               label="Sample Menu"
+               mnemonic="M">
+            <command
+                  commandId="com.diabolo.eclipse.bitbucket.commands.sampleCommand"
+                  id="com.diabolo.eclipse.bitbucket.menus.sampleCommand"
+                  mnemonic="S">
+            </command>
+         </menu>
+      </menuContribution>
    </extension>
 
 </plugin>
